--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Test</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eaque reiciendis at, dolor blanditiis porro ipsam sequi quaerat nisi natus fuga autem, doloribus dolore eveniet quas placeat? Non, id quasi!</p>
+   <p> 
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, maxime? Laboriosam enim voluptatum aperiam commodi, possimus neque officiis quae quibusdam aliquid eos molestias dolorem, eligendi perferendis recusandae eius sunt dolores.
+   </p>
+   
+
 </body>
 </html>
